--- a/.github/workflows/hetzner_schiphol_tf_validate.yml
+++ b/.github/workflows/hetzner_schiphol_tf_validate.yml
@@ -4,12 +4,14 @@ on:
   push:
     branches:
       - '**'
+    paths:
+      - 'terraform/env/schiphol/**'
 
 jobs:
   call-terraform-validate:
     uses: marchoog/devops/.github/workflows/template_tf_validate.yml@main
     with:
-      working_directory: "./terraform/env/schiphol/env"
+      working_directory: "./terraform/env/schiphol"
     secrets:
       TF_GITHUB_TOKEN_PAT: ${{ secrets.TF_GITHUB_TOKEN_PAT }}
       TF_AWS_ACCES_KEY_ID: ${{ secrets.TF_AWS_ACCES_KEY_ID }}
