--- a/.github/workflows/hetzner_schiphol_tf_plan.yml
+++ b/.github/workflows/hetzner_schiphol_tf_plan.yml
@@ -6,13 +6,13 @@ on:
       - main
     types: [opened, synchronize, reopened]
     paths:
-      - 'terraform/env/schiphol/env/**'
+      - 'terraform/env/schiphol/**'
 
 jobs:
   call-terraform-plan:
     uses: marchoog/devops/.github/workflows/template_tf_plan.yml@main
     with:
-      working_directory: "./terraform/env/schiphol/env"
+      working_directory: "./terraform/env/schiphol/"
     secrets:
       TF_GITHUB_TOKEN_PAT: ${{ secrets.TF_GITHUB_TOKEN_PAT }}
       TF_AWS_ACCES_KEY_ID: ${{ secrets.TF_AWS_ACCES_KEY_ID }}
