--- a/.github/workflows/hetzner_schiphol_tf_apply.yml
+++ b/.github/workflows/hetzner_schiphol_tf_apply.yml
@@ -8,7 +8,7 @@ jobs:
     uses: marchoog/devops/.github/workflows/template_tf_apply.yml@main
     with:
       tf_version: "1.5.7"
-      working_directory: "terraform/env/schiphol/env"
+      working_directory: "terraform/env/schiphol"
     secrets:
       TF_GITHUB_TOKEN_PAT: ${{ secrets.TF_GITHUB_TOKEN_PAT }}
       TF_AWS_ACCES_KEY_ID: ${{ secrets.TF_AWS_ACCES_KEY_ID }}
