--- a/.github/workflows/hetzner_schiphol_tf_validate.yml
+++ b/.github/workflows/hetzner_schiphol_tf_validate.yml
@@ -13,6 +13,6 @@ jobs:
     with:
       working_directory: "./terraform/env/schiphol"
     secrets:
-      TF_GITHUB_TOKEN_PAT: ${{ secrets.TF_GITHUB_TOKEN_PAT }}
-      TF_AWS_ACCES_KEY_ID: ${{ secrets.TF_AWS_ACCES_KEY_ID }}
-      TF_AWS_SECRET_ACCESS_KEY: ${{ secrets.TF_AWS_SECRET_ACCESS_KEY }}
+      TF_GITHUB_TOKEN_PAT: ${{ secrets.SCHIPHOL_GITHUB_TOKEN_PAT }}
+      TF_AWS_ACCES_KEY_ID: ${{ secrets.SCHIPHOL_AWS_ACCES_KEY_ID }}
+      TF_AWS_SECRET_ACCESS_KEY: ${{ secrets.SCHIPHOL_AWS_SECRET_ACCESS_KEY }}
