--- a/.github/workflows/hetzner_schiphol_tf_validate.yml
+++ b/.github/workflows/hetzner_schiphol_tf_validate.yml
@@ -1,5 +1,6 @@
 name: Hetzner Schiphol | Terraform Validate on Push
 
+
 on:
   push:
     branches:
@@ -13,6 +14,7 @@ jobs:
     with:
       working_directory: "./terraform/env/schiphol"
     secrets:
-      TF_GITHUB_TOKEN_PAT: ${{ secrets.SCHIPHOL_GITHUB_TOKEN_PAT }}
-      TF_AWS_ACCES_KEY_ID: ${{ secrets.SCHIPHOL_AWS_ACCES_KEY_ID }}
-      TF_AWS_SECRET_ACCESS_KEY: ${{ secrets.SCHIPHOL_AWS_SECRET_ACCESS_KEY }}
+      TF_GITHUB_TOKEN_PAT: ${{ secrets.TF_GITHUB_TOKEN_PAT }}
+      TF_AWS_ACCES_KEY_ID: ${{ secrets.TF_AWS_ACCES_KEY_ID }}
+      TF_AWS_SECRET_ACCESS_KEY: ${{ secrets.TF_AWS_SECRET_ACCESS_KEY }}
+
