--- a/.github/workflows/template_tf_plan.yml
+++ b/.github/workflows/template_tf_plan.yml
@@ -16,8 +16,6 @@ on:
         required: true
       TF_HETZNER_TOKEN:
         required: true
-      GITHUB_TOKEN:
-        required: true
 
 env:
   TF_VERSION: 1.11.4
@@ -57,7 +55,7 @@ jobs:
       - name: Comment Terraform Plan on PR
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.TF_GITHUB_TOKEN_PAT }}
           script: |
             const plan = `${{ steps.plan.outputs.plan }}`;
             github.rest.issues.createComment({
