--- a/.github/workflows/hetzner_schiphol_tf_plan.yml
+++ b/.github/workflows/hetzner_schiphol_tf_plan.yml
@@ -12,7 +12,7 @@ jobs:
   call-terraform-plan:
     uses: marchoog/devops/.github/workflows/template_tf_plan.yml@main
     with:
-      working_directory: "terraform/env/schiphol"
+      working_directory: "terraform/env/hetzner/schiphol"
     secrets:
       TF_GITHUB_TOKEN_PAT: ${{ secrets.TF_GITHUB_TOKEN_PAT }}
       TF_AWS_ACCES_KEY_ID: ${{ secrets.TF_AWS_ACCES_KEY_ID }}
