--- a/.github/workflows/hetzner_schiphol_tf_plan.yml
+++ b/.github/workflows/hetzner_schiphol_tf_plan.yml
@@ -6,7 +6,7 @@ on:
       - main
     types: [opened, synchronize, reopened]
     paths:
-      - 'terraform/env/schiphol/**'
+      - 'terraform/env/hetzner/schiphol/**'
 
 jobs:
   call-terraform-plan:
