--- a/.github/workflows/hetzner_schiphol_tf_drift.yml
+++ b/.github/workflows/hetzner_schiphol_tf_drift.yml
@@ -1,6 +1,7 @@
 name: Schiphol | Terraform Drift Check Template
 
 on:
+    workflow_dispatch:
     schedule:
         - cron: '0 3 * * *'  # Runs daily at 03:00 UTC
 
