--- a/.github/workflows/template_tf_destroy.yml
+++ b/.github/workflows/template_tf_destroy.yml
@@ -25,6 +25,28 @@ on:
         required: true
 
 jobs:
+  hetzner-snapshots:
+    if: ${{ inputs.create_snapshots == 'yes' }}
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./scripts
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Install Hcloud CLI
+        run: |
+          curl -sSL https://github.com/hetznercloud/cli/releases/latest/download/hcloud-linux-amd64.tar.gz | tar -xz
+          sudo mv hcloud /usr/local/bin/hcloud
+          hcloud version
+
+      - name: Create Hetzner Snapshots
+        env:
+          HCLOUD_TOKEN: ${{ secrets.TF_HETZNER_TOKEN }}
+        run: python3 create_hetzner_snapshot.py
+  
+
   terraform-destroy:
     runs-on: ubuntu-latest
     defaults:
@@ -39,15 +61,6 @@ jobs:
           curl -sSL https://github.com/hetznercloud/cli/releases/latest/download/hcloud-linux-amd64.tar.gz | tar -xz
           sudo mv hcloud /usr/local/bin/hcloud
           hcloud version
-
-      - name: Create Hetzner Snapshots
-        if: ${{ inputs.create_snapshots == 'yes' }}
-        working-directory: ./scripts
-        env:
-          HCLOUD_TOKEN: ${{ secrets.TF_HETZNER_TOKEN }}
-        run: |
-          python3 create_hetzner_snapshot.py
-          
 
       - name: Terraform Setup
         uses: ./.github/actions/terraform-setup
