--- a/.github/actions/terraform-setup/action.yml
+++ b/.github/actions/terraform-setup/action.yml
@@ -11,6 +11,8 @@ inputs:
     required: true
   working_directory:
     required: true
+  tf_key:
+    required: true
 
 runs:
   using: "composite"
