--- a/.github/workflows/template_tf_destroy.yml
+++ b/.github/workflows/template_tf_destroy.yml
@@ -10,6 +10,9 @@ on:
       tf_version:
         required: true
         type: string
+      tf_key:
+        required: true
+        type: string
       working_directory:
         required: true
         type: string
@@ -69,6 +72,7 @@ jobs:
         uses: ./.github/actions/terraform-setup
         with:
           tf_version: ${{ inputs.TF_VERSION }}
+          tf_key: ${{ inputs.tf_key }}
           github_token_pat: ${{ secrets.TF_GITHUB_TOKEN_PAT }}
           aws_access_key_id: ${{ secrets.TF_AWS_ACCES_KEY_ID }}
           aws_secret_access_key: ${{ secrets.TF_AWS_SECRET_ACCESS_KEY }}
