--- a/.github/workflows/babilon_schiphol_tf_validate.yml
+++ b/.github/workflows/babilon_schiphol_tf_validate.yml
@@ -7,14 +7,14 @@ on:
     branches:
       - '**'
     paths:
-      - 'terraform/env/hetzner/schiphol/**'
+      - 'terraform/env/hetzner/babilon/**'
 
 jobs:
   call-terraform-validate:
     uses: marchoog/devops/.github/workflows/template_tf_validate.yml@main
     with:
-      tf_key: "tfstate/schiphol"
-      working_directory: "terraform/env/hetzner/schiphol"
+      tf_key: "tfstate/babilon"
+      working_directory: "terraform/env/hetzner/babilon"
     secrets:
       TF_GITHUB_TOKEN_PAT: ${{ secrets.TF_GITHUB_TOKEN_PAT }}
       TF_AWS_ACCES_KEY_ID: ${{ secrets.TF_AWS_ACCES_KEY_ID }}
