--- a/.github/workflows/hetzner_schiphol_tf_plan.yml
+++ b/.github/workflows/hetzner_schiphol_tf_plan.yml
@@ -12,6 +12,7 @@ jobs:
   call-terraform-plan:
     uses: marchoog/devops/.github/workflows/template_tf_plan.yml@main
     with:
+      tf_key: "tfstate/schiphol"
       working_directory: "terraform/env/hetzner/schiphol"
     secrets:
       TF_GITHUB_TOKEN_PAT: ${{ secrets.TF_GITHUB_TOKEN_PAT }}
