--- a/.github/workflows/hetzner_babilon_tf_destroy.yml
+++ b/.github/workflows/hetzner_babilon_tf_destroy.yml
@@ -24,4 +24,4 @@ jobs:
       TF_GITHUB_TOKEN_PAT: ${{ secrets.TF_GITHUB_TOKEN_PAT }}
       TF_AWS_ACCES_KEY_ID: ${{ secrets.TF_AWS_ACCES_KEY_ID }}
       TF_AWS_SECRET_ACCESS_KEY: ${{ secrets.TF_AWS_SECRET_ACCESS_KEY }}
-      TF_HETZNER_TOKEN: ${{ secrets.TF_HETZNER_TOKEN }}
+      TF_HETZNER_TOKEN: ${{ secrets.TF_HETZNER_BABILON_TOKEN }}
