--- a/ansible/roles/k3s/tasks/install_controller.yaml
+++ b/ansible/roles/k3s/tasks/install_controller.yaml
@@ -5,7 +5,7 @@
 
 - name: Install K3s master
   ansible.builtin.shell: |
-    curl -sfL https://get.k3s.io | K3S_TOKEN={{ k3s_token }} sh -s - server
+    curl -sfL https://get.k3s.io | sh -
   become: true
   environment:
     K3S_VERSION: "{{ k3s_version }}"
