--- a/clusters/babilon/flux-system/kustomization.yaml
+++ b/clusters/babilon/flux-system/kustomization.yaml
@@ -3,4 +3,5 @@ kind: Kustomization
 resources:
 - gotk-components.yaml
 - gotk-sync.yaml
-- hashicorp-helmrepo.yaml
+- helmrepo-podinfo.yaml
+- helmrepo-hashicorp.yaml
