--- a/.github/workflows/hetzner_babilon_tf_plan.yml
+++ b/.github/workflows/hetzner_babilon_tf_plan.yml
@@ -6,11 +6,11 @@ on:
       - main
     types: [opened, synchronize, reopened]
     paths:
-      - 'terraform/env/hetzner/babilon/**'
+      - "terraform/env/hetzner/babilon/**"
 
 jobs:
   call-terraform-plan:
-    uses: marchoog/devops/.github/workflows/template_tf_plan.yml@main
+    uses: marchoog/devops/.github/workflows/hetzner_template_tf_plan.yml@main
     with:
       tf_key: "tfstate/babilon"
       working_directory: "terraform/env/hetzner/babilon"
