--- a/.github/workflows/hetzner_template_tf_plan.yml
+++ b/.github/workflows/hetzner_template_tf_plan.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Terraform Setup
-        uses: ./.github/actions/terraform-setup
+        uses: ./.github/actions/hetzner-terraform-setup
         with:
           tf_version: ${{ env.TF_VERSION }}
           tf_key: ${{ inputs.tf_key }}
@@ -55,6 +55,16 @@ jobs:
           echo "$PLAN" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
           exit $TF_EXIT_CODE
+
+      - name: Upload plan artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: tfplan
+          path: |
+            ${{ inputs.working_directory }}/tfplan
+            ${{ inputs.working_directory }}/tfplan.txt
+          if-no-files-found: error
+          retention-days: 7
 
       - name: Comment Terraform Plan on PR
         uses: actions/github-script@v7
