--- a/.github/workflows/azure_hoogendoorn_tf_apply.yml
+++ b/.github/workflows/azure_hoogendoorn_tf_apply.yml
@@ -1,1 +1,17 @@
 name: Hoogendoorn | Run Terraform Apply
+on:
+  workflow_dispatch:
+
+jobs:
+  call-terraform-plan:
+    uses: marchoog/devops/.github/workflows/azure_template_tf_apply.yml@main
+    with:
+      tf_key: "tfstate/subscription/hoogendoorn-payed"
+      tf_storage_account: saiaceun
+      tf_container_name: tf-state
+      working_directory: "terraform/env/azure/hoogendoorn_payed"
+    secrets:
+      TF_GITHUB_TOKEN_PAT: ${{ secrets.TF_GITHUB_TOKEN_PAT }}
+      AZURE_CLIENT_ID: ${{ secrets.TF_AZURE_CLIENT_ID }}
+      AZURE_TENANT_ID: ${{ secrets.TF_AZURE_TENANT_ID }}
+      AZURE_SUBSCRIPTION_ID: ${{ secrets.TF_AZURE_SUBSCRIPTION_ID }}
