added tf version

--- a/.github/workflows/azure_hoogendoorn_tf_apply.yml
+++ b/.github/workflows/azure_hoogendoorn_tf_apply.yml
@@ -9,6 +9,7 @@ jobs:
       tf_key: "tfstate/subscription/hoogendoorn-payed"
       tf_storage_account: saiaceun
       tf_container_name: tf-state
+      tf_version: "1.11.4"
       working_directory: "terraform/env/azure/hoogendoorn_payed"
     secrets:
       TF_GITHUB_TOKEN_PAT: ${{ secrets.TF_GITHUB_TOKEN_PAT }}
