--- a/.github/workflows/azure_hoogendoorn_tf_apply.yml
+++ b/.github/workflows/azure_hoogendoorn_tf_apply.yml
@@ -2,6 +2,9 @@ name: Hoogendoorn | Run Terraform Apply
 on:
   workflow_dispatch:
 
+permissions:
+  id-token: write
+  contents: read
 jobs:
   call-terraform-plan:
     uses: marchoog/devops/.github/workflows/azure_template_tf_apply.yml@main
