--- a/.github/actions/azure-terraform-setup/action.yml
+++ b/.github/actions/azure-terraform-setup/action.yml
@@ -44,6 +44,8 @@ runs:
     - name: Terraform Init (AzureRM)
       run: |
         terraform init -input=false \
+          -backend-config="resource_group_name": "InfrastructureAsCode" \
+          -backend-config="use_azuread_auth=true" \
           -backend-config="storage_account_name=${{ inputs.tf_storage_account }}" \
           -backend-config="container_name=${{ inputs.tf_container_name }}" \
           -backend-config="key=${{ inputs.tf_key }}" \
