--- a/.github/workflows/hetzner_template_tf_destroy.yml
+++ b/.github/workflows/hetzner_template_tf_destroy.yml
@@ -7,22 +7,34 @@ on:
         required: true
         type: string
         description: "Create Hetzner snapshots before destroy?"
-      tf_version:
-        required: true
-        type: string
-      tf_key:
-        required: true
-        type: string
       working_directory:
         required: true
         type: string
-        description: "Working directory for terraform commands"
+        description: "Terraform working directory"
+      tf_key:
+        required: true
+        type: string
+        description: "Remote state key (path) in the Azure Storage container"
+      tf_storage_account:
+        required: true
+        type: string
+        description: "Azure Storage Account used for TF state backend"
+      tf_container_name:
+        required: true
+        type: string
+        description: "Azure Storage container used for TF state backend"
+      tf_version:
+        required: false
+        type: string
+        default: "1.11.4"
     secrets:
       TF_GITHUB_TOKEN_PAT:
         required: true
-      TF_AWS_ACCES_KEY_ID:
+      AZURE_CLIENT_ID:
         required: true
-      TF_AWS_SECRET_ACCESS_KEY:
+      AZURE_TENANT_ID:
+        required: true
+      AZURE_SUBSCRIPTION_ID:
         required: true
       TF_HETZNER_TOKEN:
         required: true
@@ -67,19 +79,20 @@ jobs:
           sudo mv hcloud /usr/local/bin/hcloud
           hcloud version
 
-      - name: Terraform Setup
-        uses: ./.github/actions/hetzner-terraform-setup
+      - name: Terraform Setup (Azure)
+        uses: ./.github/actions/azure-terraform-setup
         with:
-          tf_version: ${{ inputs.TF_VERSION }}
-          tf_key: ${{ inputs.tf_key }}
+          tf_version: ${{ inputs.tf_version }}
           github_token_pat: ${{ secrets.TF_GITHUB_TOKEN_PAT }}
-          aws_access_key_id: ${{ secrets.TF_AWS_ACCES_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.TF_AWS_SECRET_ACCESS_KEY }}
+          azure_client_id: ${{ secrets.AZURE_CLIENT_ID }}
+          azure_tenant_id: ${{ secrets.AZURE_TENANT_ID }}
+          azure_subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          tf_storage_account: ${{ inputs.tf_storage_account }}
+          tf_container_name: ${{ inputs.tf_container_name }}
+          tf_key: ${{ inputs.tf_key }}
           working_directory: ${{ inputs.working_directory }}
 
       - name: Terraform Destroy
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.TF_AWS_ACCES_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.TF_AWS_SECRET_ACCESS_KEY }}
           HCLOUD_TOKEN: ${{ secrets.TF_HETZNER_TOKEN }}
         run: terraform destroy -auto-approve -input=false
