--- a/.github/workflows/hetzner_template_tf_validate.yml
+++ b/.github/workflows/hetzner_template_tf_validate.yml
@@ -10,14 +10,30 @@ on:
       tf_key:
         required: true
         type: string
+        description: "Remote state key (path) in the Azure Storage container"
+      tf_storage_account:
+        required: true
+        type: string
+        description: "Azure Storage Account used for TF state backend"
+      tf_container_name:
+        required: true
+        type: string
+        description: "Azure Storage container used for TF state backend"
+      tf_version:
+        required: false
+        type: string
+        default: "1.11.4"
     secrets:
       TF_GITHUB_TOKEN_PAT:
         required: true
-      TF_AWS_ACCES_KEY_ID:
+      AZURE_CLIENT_ID:
         required: true
-      TF_AWS_SECRET_ACCESS_KEY:
+      AZURE_TENANT_ID:
         required: true
-
+      AZURE_SUBSCRIPTION_ID:
+        required: true
+      TF_HETZNER_TOKEN:
+        required: true
 env:
   TF_VERSION: 1.11.4
 
@@ -31,14 +47,18 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Terraform Setup
-        uses: ./.github/actions/hetzner-terraform-setup
+      - name: Terraform Setup (Azure)
+        uses: ./.github/actions/azure-terraform-setup
         with:
-          tf_version: ${{ env.TF_VERSION }}
-          tf_key: ${{ inputs.tf_key }}
+          tf_version: ${{ inputs.tf_version }}
           github_token_pat: ${{ secrets.TF_GITHUB_TOKEN_PAT }}
-          aws_access_key_id: ${{ secrets.TF_AWS_ACCES_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.TF_AWS_SECRET_ACCESS_KEY }}
+          azure_client_id: ${{ secrets.AZURE_CLIENT_ID }}
+          azure_tenant_id: ${{ secrets.AZURE_TENANT_ID }}
+          azure_subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          tf_storage_account: ${{ inputs.tf_storage_account }}
+          tf_container_name: ${{ inputs.tf_container_name }}
+          tf_key: ${{ inputs.tf_key }}
+          working_directory: ${{ inputs.working_directory }}
 
       - name: Terraform Format Check
         run: terraform fmt -check -recursive -diff
