--- a/.github/workflows/hetzner_template_tf_apply.yml
+++ b/.github/workflows/hetzner_template_tf_apply.yml
@@ -32,6 +32,8 @@ on:
         required: true
       AZURE_SUBSCRIPTION_ID:
         required: true
+      TF_HETZNER_TOKEN:
+        required: true
 
 jobs:
   terraform-apply:
