--- a/.github/workflows/hetzner_template_tf_destroy.yml
+++ b/.github/workflows/hetzner_template_tf_destroy.yml
@@ -27,6 +27,9 @@ on:
         required: false
         type: string
         default: "1.11.4"
+      environment:
+        required: true
+        type: string
     secrets:
       TF_GITHUB_TOKEN_PAT:
         required: true
