--- a/.github/workflows/azure_hoogendoorn_tf_plan.yml
+++ b/.github/workflows/azure_hoogendoorn_tf_plan.yml
@@ -15,7 +15,8 @@ jobs:
       tf_key: "tfstate/subscription/hoogendoorn-payed"
       tf_storage_account: saiaceun
       tf_container_name: tf-state
-      working_directory: "terraform/hoogendoorn"
+      working_directory: "tf-environments/hoogendoorn_payed"
+      environment: prod
     secrets:
       TF_GITHUB_TOKEN_PAT: ${{ secrets.TF_GITHUB_TOKEN_PAT }}
       AZURE_CLIENT_ID: ${{ secrets.TF_AZURE_CLIENT_ID }}
