--- a/.github/workflows/azure_hoogendoorn_tf_plan.yml
+++ b/.github/workflows/azure_hoogendoorn_tf_plan.yml
@@ -8,6 +8,9 @@ on:
     paths:
       - "terraform/hoogendoorn/**"
 
+permissions:
+  id-token: write
+  contents: read
 jobs:
   call-terraform-plan:
     uses: marchoog/devops/.github/workflows/azure_template_tf_plan.yml@main
