--- a/.github/workflows/hetzner_schiphol_tf_destroy.yml
+++ b/.github/workflows/hetzner_schiphol_tf_destroy.yml
@@ -11,7 +11,9 @@ on:
         options:
           - "yes"
           - "no"
-
+permissions:
+  id-token: write
+  contents: read
 jobs:
   call-terraform-destroy:
     uses: marchoog/devops/.github/workflows/hetzner_template_tf_destroy.yml@main
