--- a/.github/workflows/hetzner_schiphol_tf_plan.yml
+++ b/.github/workflows/hetzner_schiphol_tf_plan.yml
@@ -8,6 +8,9 @@ on:
     paths:
       - "terraform/schiphol/**"
 
+permissions:
+  id-token: write
+  contents: read
 jobs:
   call-terraform-plan:
     uses: marchoog/devops/.github/workflows/hetzner_template_tf_plan.yml@main
