updated the poeplines

--- a/.github/workflows/hetzner_template_tf_plan.yml
+++ b/.github/workflows/hetzner_template_tf_plan.yml
@@ -43,6 +43,7 @@ env:
 
 jobs:
   terraform-plan:
+    environment: ${{ inputs.environment }}
     runs-on: ubuntu-latest
     defaults:
       run:
