--- a/.github/workflows/hetzner_template_tf_validate.yml
+++ b/.github/workflows/hetzner_template_tf_validate.yml
@@ -42,6 +42,7 @@ env:
 
 jobs:
   terraform-validate:
+    environment: ${{ inputs.environment }}
     runs-on: ubuntu-latest
     defaults:
       run:
