--- a/.github/workflows/hetzner_template_tf_apply.yml
+++ b/.github/workflows/hetzner_template_tf_apply.yml
@@ -40,6 +40,7 @@ on:
 
 jobs:
   terraform-apply:
+    environment: ${{ inputs.environment }}
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -69,6 +70,10 @@ jobs:
 
       - name: Apply
         env:
+          ARM_USE_OIDC: "true"
+          ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+          ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+          ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           HCLOUD_TOKEN: ${{ secrets.TF_HETZNER_TOKEN }}
         run: |
           terraform apply -auto-approve -input=false
