--- a/.github/workflows/hetzner_template_tf_destroy.yml
+++ b/.github/workflows/hetzner_template_tf_destroy.yml
@@ -44,6 +44,7 @@ on:
 
 jobs:
   hetzner-snapshots:
+    environment: ${{ inputs.environment }}
     runs-on: ubuntu-latest
     defaults:
       run:
