--- a/.github/workflows/hetzner_schiphol_tf_destroy.yml
+++ b/.github/workflows/hetzner_schiphol_tf_destroy.yml
@@ -21,6 +21,7 @@ jobs:
       tf_key: "tfstate/hetzner/schiphol"
       tf_storage_account: saiaceun
       tf_container_name: tf-state
+      create_snapshots: ${{ inputs.create_snapshots }}
       working_directory: "tf-environments/schiphol"
       environment: prod
 
