fixed passing delete

--- a/.github/workflows/hetzner_template_tf_destroy.yml
+++ b/.github/workflows/hetzner_template_tf_destroy.yml
@@ -68,6 +68,7 @@ jobs:
         run: python3 create_hetzner_snapshot.py
 
   terraform-destroy:
+    environment: ${{ inputs.environment }}
     needs: hetzner-snapshots
     runs-on: ubuntu-latest
     defaults:
